util/DateTimeUtil: Fix Java9+ deprecation for new Double.